# MobileVulkanStartingPoint

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: main.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
